PerLa DataType changes (work in progress)